--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -1,20 +1,18 @@
-<div ng-include="'/scripts/features/commons/header.html'"></div>
-<div class="row"><!--  ng-show="!advancedSearch"> -->
+<div class="row">
   <div class="search-bg">
       <div class="input-group inner" page-scroll  nvabar-searchbox-id="navSearchId">
         <input  type="text" class="form-control" id="generalSearch" ng-model="searchParams.generalSearch"  placeholder="example: Spinach MI">
         <sapn class="input-group-btn">
-          <button class="btn btn-default" type="button" ng-click="searchDisclaimer(searchParams)">
+          <button class="btn btn-default" type="button" ng-click="base.search(searchParams)">
             <span class="glyphicon glyphicon-search"></span>
           </button>
           </sapn>
       </div>
   </div>
 </div>
-
-<md-card>
-  <md-card-content>
-    <h2 class="md-title" style="margin-top:0px">Safe Food - Recall Data</h2>
+<div class="container">
+  <section>
+    <h2>Safe Food - Recall Data</h2>
     <p>The Food Recalls on this site are based on the Enforcement Reports published via the OpenFDA API</p>
 
     <p>For more information about OpenFDA </p>
@@ -32,5 +30,19 @@
       <li><a href="http://www.fda.gov/ForConsumers/ConsumerUpdates/ucm049070.htm">FDA 101: Product Recalls</a></li>
     </ul>
 
-  </md-card-content>
-</md-card> 
+  </section>
+  <section>
+    <h2>Recalls Near Me</h2>
+    <div class="list-group">
+      <a ng-repeat="item in recallsNearMe.results track by $index" 
+        class="list-group-item"
+        ng-click="viewDetails(item)"
+        ng-class="{ 'active': item.active }">
+        <h4 class="list-group-item-heading">{{item.recalling_firm}} ({{item.recall_number}})</h4>
+        <div><strong>Recall Initiated:</strong> {{item.recall_initiation_date}} ({{item.status}})</div>
+        <div><strong>Distribution Pattern:</strong> {{item.distribution_pattern}}</div>
+        <div><strong>Product Description:</strong> {{item.product_description}}</div>
+      </a>
+    </div>
+  </section>
+</div>
