--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -1,13 +1,15 @@
 <div class="row">
   <div class="search-bg">
-      <div class="input-group inner" page-scroll  nvabar-searchbox-id="navSearchId">
-        <input  type="text" class="form-control" id="generalSearch" ng-model="searchParams.generalSearch"  placeholder="example: Spinach MI">
+    <form name="omni-search" ng-submit="base.search(searchParams)">
+      <div class="form-group input-group inner" page-scroll  nvabar-searchbox-id="navSearchId">
+        <input  type="text" class="form-control"  id="generalSearch" ng-model="searchParams.generalSearch"  placeholder="example: Spinach MI">
         <sapn class="input-group-btn">
           <button class="btn btn-default" type="button" ng-click="base.search(searchParams)">
             <span class="glyphicon glyphicon-search"></span>
           </button>
           </sapn>
       </div>
+    </form>
   </div>
 </div>
 <div class="container">
