Fixed navbar show/hide issue.

--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -1,4 +1,4 @@
-<form name="recall-search" class="form-margin">
+<form name="recall-search" class="form-margin" show-nav-search-box nvabar-searchbox-id="navSearchId">
   <div class="row">
     <div class="form-group col-md-6">
       <label for="affectedArea">Affected Area</label>
