--- a/client/scripts/features/food-recall-search/food-recall-details.html
+++ b/client/scripts/features/food-recall-search/food-recall-details.html
@@ -1,34 +1,33 @@
-<md-dialog>
-  <h2 style="padding: 0px 22px 0px 22px;">Recall Details </h2><small style="padding: 3px 22px 5px 22px;  margin-bottom: 8px; margin-top:5px;">(Last Updated on {{details.last_updated | date: "dd MMM yyyy"}})</small>
-  <md-divider></md-divider>
-  <md-dialog-content style="padding-top: 12px; padding-bottom: 12px">
-    <section>
-      <h3 style="margin-top:0px">Event</h3>
-      <div><strong>Recall Number:</strong> {{details.recall_number}}</div>
-      <div><strong>Recall Reported:</strong> {{details.report_date}}</div>
-      <div><strong>Recall Initiated:</strong> {{details.recall_initiation_date}} ({{details.status}})</div>
-      <div><strong>Distribution Pattern:</strong> {{details.distribution_pattern}}</div>
-      <div><strong>Classification:</strong> {{details.classification}}</div>
-      <div><strong>Reason:</strong> {{details.reason_for_recall}}
-      </div>
-      <div><strong>Initial Firm Notification:</strong> {{details.initial_firm_notification}}</div>
-    </section>
-    <section>
-      <h3>Company</h3>
-      <div><strong>Name:</strong> {{details.recalling_firm}}</div>
-      <div><strong>City:</strong> {{details.city}}</div>
-      <div><strong>State:</strong> {{details.state}}</div>
-      <div><strong>Country:</strong> {{details.country}}</div>
-    </section>
-    <section>
-      <h3>Product</h3>
-      <div><strong>Product Description:</strong> {{details.product_description}}</div>
-      <div><strong>Product Quantity:</strong> {{details.product_quantity}}</div>
-      <div><strong>Code Info:</strong> {{details.code_info}}</div>
-    </section>
-
-  </md-dialog-content>
-    <div class="md-actions">
-      <md-button ng-click="hideDialog()">Close</md-button>
+<div class="modal-header">
+  <h3>Recall Details</h3>
+  <small>(Last Updated on {{details.last_updated | date: "dd MMM yyyy"}})</small>
+</div>
+<div class="modal-body">
+  <section>
+    <h4>Event</h4>
+    <div><strong>Recall Number:</strong> {{details.recall_number}}</div>
+    <div><strong>Recall Reported:</strong> {{details.report_date}}</div>
+    <div><strong>Recall Initiated:</strong> {{details.recall_initiation_date}} ({{details.status}})</div>
+    <div><strong>Distribution Pattern:</strong> {{details.distribution_pattern}}</div>
+    <div><strong>Classification:</strong> {{details.classification}}</div>
+    <div><strong>Reason:</strong> {{details.reason_for_recall}}
     </div>
-</md-dialog>
+    <div><strong>Initial Firm Notification:</strong> {{details.initial_firm_notification}}</div>
+  </section>
+  <section>
+    <h4>Company</h4>
+    <div><strong>Name:</strong> {{details.recalling_firm}}</div>
+    <div><strong>City:</strong> {{details.city}}</div>
+    <div><strong>State:</strong> {{details.state}}</div>
+    <div><strong>Country:</strong> {{details.country}}</div>
+  </section>
+  <section>
+    <h4>Product</h4>
+    <div><strong>Product Description:</strong> {{details.product_description}}</div>
+    <div><strong>Product Quantity:</strong> {{details.product_quantity}}</div>
+    <div><strong>Code Info:</strong> {{details.code_info}}</div>
+  </section>
+</div>
+<div class="modal-footer">
+  <button class="btn btn-primary" ng-click="close(details)">CLOSE</button>
+</div>
