--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -42,7 +42,7 @@
 
 <div ng-show="recallData" style="text-align:right">
   <div class="pull-left" style="margin:20px 10px; padding-top:6px; padding-bottom:6px;">{{recallData.meta.results.skip + 1}} - {{(recallData.meta.results.skip + recallData.results.length)}} of {{recallData.meta.results.total}} Results</div>
-  <pagination total-items="recallData.meta.results.total" ng-model="base.searchParams.page" ng-change="search(base.searchParams)" items-per-page="recallData.meta.results.limit" max-size="5" style="padding-right:15px"></pagination>
+  <pagination total-items="recallData.meta.results.total" ng-model="base.searchParams.page" ng-change="search(base.searchParams, false)" items-per-page="recallData.meta.results.limit" max-size="5" style="padding-right:15px"></pagination>
 </div>
 <center ng-if="!recallData && initialized">
   <h4>Record(s) Not Found!</h4>
