Add a tiny bit of responsiveness to the UI

--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="search-bg">
     <form name="omni-search" ng-submit="base.search(searchParams)">
-      <div class="form-group input-group inner" page-scroll  nvabar-searchbox-id="navSearchId">
-        <input  type="text" class="form-control"  id="generalSearch" ng-model="searchParams.generalSearch"  placeholder="example: Spinach MI">
+      <div class="form-group input-group inner col-xs-8 col-sm-4" page-scroll  nvabar-searchbox-id="navSearchId">
+        <input type="text" class="form-control" id="generalSearch" ng-model="searchParams.generalSearch" placeholder="example: Spinach MI">
         <sapn class="input-group-btn">
           <button class="btn btn-default" type="button" ng-click="base.search(searchParams)">
             <span class="glyphicon glyphicon-search"></span>
