--- a/client/scripts/decorators/$modal-decorator/simple-modal.html
+++ b/client/scripts/decorators/$modal-decorator/simple-modal.html
@@ -5,5 +5,5 @@
   <div>{{content}}</div>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="ok()">OK</button>
+  <button class="btn btn-primary" ng-click="$close()">OK</button>
 </div>
