--- a/client/scripts/features/base/base.html
+++ b/client/scripts/features/base/base.html
@@ -1,3 +1,6 @@
+<loading-spinner></loading-spinner>
+<toast></toast>
+
 <nav class="navbar navbar-default navbar-fixed-top sf-header">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -19,6 +22,6 @@
 </nav>
 
 <div ui-view="content">
+
 </div>
-<toast></toast>
 <footer align="right" style="font-size:12px;padding-right:5px;">The openFDA beta research project contents were last updated on {{meta.last_updated | date:'MMMM dd, yyyy'}}</footer>
