--- a/client/scripts/features/food-recall-search/food-recall-details.html
+++ b/client/scripts/features/food-recall-search/food-recall-details.html
@@ -29,5 +29,5 @@
   </section>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="close(details)">CLOSE</button>
+  <button class="btn btn-primary" ng-click="$close()">CLOSE</button>
 </div>
