--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -1,7 +1,9 @@
 <div class="row">
-  <div class="search-bg">
+  <div class="slide header" id="title">
     <form name="omni-search" ng-submit="base.search(searchParams)">
+        <h1>Safe Food Search Recalls</h1>
       <div class="form-group input-group inner col-xs-8 col-sm-4" page-scroll  nvabar-searchbox-id="navSearchId">
+        <div style="clear:both;"></div>
         <input type="text" class="form-control" id="generalSearch" ng-model="searchParams.generalSearch" title="Search Terms" placeholder="example: Spinach MI">
         <sapn class="input-group-btn">
           <button class="btn btn-default" type="button" ng-click="base.search(searchParams)" title="Search">
@@ -13,6 +15,15 @@
   </div>
 </div>
 <div class="container">
+    <div>
+        <h2>Food Recalls and Enforcement Reports</h2>
+        <p>
+            Recalls are an appropriate alternative method for removing or correcting marketed consumer products, their labeling, and/or promotional literature that violate the laws administered by the Food and Drug Administration (FDA). Recalls afford equal consumer protection but generally are more efficient and timely than formal administrative or civil actions, especially when the product has been widely distributed.
+        </p>
+        <p>
+            Manufacturers and/or distributors may initiate a recall at any time to fulfill their responsibility to protect the public health from products that present a risk of injury or gross deception, or are otherwise defective. Firms may also initiate a recall following notification of a problem by FDA or a state agency, in response to a formal request by FDA, or as ordered by FDA.
+        </p>
+    </div>
   <div class="row">
     <section class="col-sm-8 col-xs-12">
       <h2>Safe Food - Recall Data</h2>
