--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="slide header" id="title">
-    <form name="omni-search" ng-submit="base.search(searchParams)">
+    <form name="omni-search" ng-submit="base.search.(base.searchParams)">
       <div class="form-group input-group inner" page-scroll  nvabar-searchbox-id="navSearchId">
       <h1>Safe Food Search Recalls</h1>
       <div style="clear:both;"></div>
-        <input  type="text" class="form-control"  id="generalSearch" ng-model="searchParams.generalSearch"  placeholder="example: Spinach MI">
+        <input  type="text" class="form-control"  id="generalSearch" ng-model="base.searchParams.generalSearch"  placeholder="example: Spinach MI">
         <sapn class="input-group-btn btn-top">
-          <button class="btn btn-default" type="button" ng-click="base.search(searchParams)">
-            <span class="glyphicon glyphicon-search"></span>
+          <button class="btn btn-default" type="button" ng-click="base.search(base.searchParams)">
+            <span class="fa fa-search"></span>
           </button>
           </sapn>
       </div>
