fixed css for orange search buttons and type enter to submit search

--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="slide header" id="title">
-    <form name="omni-search" ng-submit="base.search.(base.searchParams)">
+    <form name="omni-search" ng-submit="base.search(base.searchParams)">
       <div class="form-group input-group inner" page-scroll  nvabar-searchbox-id="navSearchId">
       <h1>Safe Food Search Recalls</h1>
       <div style="clear:both;"></div>
