--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -1,5 +1,6 @@
 <div class="container">
   <form name="recall-search" class="form-margin" show-nav-search-box nvabar-searchbox-id="navSearchId">
+<!--  
     <div class="row">
       <div class="form-group col-md-6">
         <label for="affectedArea">Affected Area</label>
@@ -10,31 +11,38 @@
         <input type="text" class="form-control" name="affectedProduct" ng-model="base.searchParams.product_description">
       </div>
     </div>
+-->    
     <div class="row">
+<!--    
       <div class="form-group col-md-6">
         <label for="companyName">Company Name</label>
         <input type="text" class="form-control" name="companyName" ng-model="base.searchParams.recalling_firm">
       </div>
-      <div class="form-group col-md-6">
+-->
+      <div class="form-group col-md-2">
         <label for="healthHazardLevel">Health Hazard Level</label>
-        <select class="form-control" name="healthHazardLevel" id="healthHazardLevel" ng-model="base.searchParams.classification" ng-options="healthHazardLevel for healthHazardLevel in healthHazardLevels"></select>
+        <select class="form-control" name="healthHazardLevel" id="healthHazardLevel" ng-model="base.searchParams.classification" ng-options="healthHazardLevel for healthHazardLevel in healthHazardLevels" ng-change="base.search(base.searchParams)"></select>
       </div>
+<!--
     </div>
     <div class="row">
-      <div class="col-md-6">
+-->
+      <div class="col-md-2">
         <div class="form-group">
           <label for="currentStatus">Current Status</label>
-          <select class="form-control" name="currentStatus" id="currentStatus" ng-model="base.searchParams.status" ng-options="status for status in statusList" multiple></select>
+          <select class="form-control" name="currentStatus" id="currentStatus" ng-model="base.searchParams.status" ng-options="status for status in statusList" ng-change="base.search(base.searchParams)" multiple></select>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-2">
         <div class="form-group">
           <label for="dateRange">Date Range</label>
-          <select class="form-control" name="dateRange" id="dateRange" ng-model="base.searchParams.recall_initiation_date" ng-options="date.name for date in dateRange"></select>
+          <select class="form-control" name="dateRange" id="dateRange" ng-model="base.searchParams.recall_initiation_date" ng-options="date.name for date in dateRange" ng-change="base.search(base.searchParams)"></select>
         </div>
+<!--        
         <div class="form-group">
           <button class="btn btn-primary pull-right" ng-click="base.search(base.searchParams)">Advance Search</button>
         </div>
+-->
       </div>
     </div>
   </form>
