small ui/css fixes

--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -5,8 +5,8 @@
       <h1>Safe Food Search Recalls</h1>
       <div style="clear:both;"></div>
         <input  type="text" class="form-control"  id="generalSearch" ng-model="base.searchParams.generalSearch"  placeholder="example: Spinach MI">
-        <sapn class="input-group-btn btn-top">
-          <button class="btn btn-default" type="button" ng-click="base.search(base.searchParams)">
+        <sapn class="input-group-btn">
+          <button class="btn btn-default btn-top" type="button" ng-click="base.search(base.searchParams)">
             <span class="fa fa-search"></span>
           </button>
           </sapn>
